# SGD

./: Bilinear.cu  CMakeLists.txt  SGD  SGD.cu  network.cu  network.hh  note
layers/: A_B0.cu  A_B0.hh  A_B1.cu  A_B1.hh  A_B1_3D.cu  A_B1_3D.hh  A_H0.cu  A_H0.hh  A_Hl.cu  A_Hl.hh  A_SF.cu  A_SF.hh  Bilinear.cu  Bilinear.hh  Hexagon.cu  Pixel.cu  Ref_projector.cu  Ref_projector.hh  SF_projector.cu  SF_projector.hh  layer.hh  linear.cu  linear.hh  relu.cu  relu.hh  sigmoid.cu  sigmoid.hh  spline_conv.hh
python/: A_B0_project.py  A_B0_ref_project.py  A_B1_project.py  A_B1_ref_project.py  A_H0_project.py  A_Hl_project.py  FORBILD.py  c_project.py  config.py  data_view.ipynb  debug  evaluation.py  main copy 2.ipynb  main.ipynb  main2.ipynb  process2.ipynb  ref_project.py  spline_conv.py
python/matrix_gen/: A_B0_project.py  A_B0_ref_project.py  A_B1_project.py  A_B1_ref_project.py  A_H0_project.py  A_Hl_project.py
python/operators/: operators.py
utils/: dataset.cu  dataset.hh  exception.hh  geo.cu  geo.hh  matrix.cu  matrix.hh  matrix_double.cu  matrix_double.hh  mcct_dataset.cpp  mcct_dataset.h  shape.hh
